<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/black"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@color/black"
            android:orientation="vertical">

            <ImageView
                    android:id="@+id/gambar1"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:src="@drawable/dadu"
                    android:contentDescription="@string/logoDadu"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:id="@+id/tombolGanti"
                    android:text="@string/acak_dadu"/>
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/urutDadu"
                    android:text="@string/urut_dadu"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tombolReset"
                    android:text="@string/reset_dadu"/>
        </LinearLayout>
    </LinearLayout>

        <TextView
            android:id="@+id/labelNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_saya"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:paddingTop="50dp"/>

        <TextView
            android:id="@+id/labelHobby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hobby_saya"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"/>

        <Button
                android:id="@+id/listMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonPindahHalamanListMovie"/>

        <Button
                android:id="@+id/kalkulator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonPindahHalamanKalkulator"/>

</androidx.appcompat.widget.LinearLayoutCompat>